# axum-webapp

./: Cargo.toml  README.md
src/: lib.rs  main.rs  router.rs
src/routes/: brew.rs  hello.rs  mod.rs
tests/: integration.rs  quick_dev.rs  route_brew.rs  route_hello.rs
tests/utils/: mod.rs  server.rs
