[dependencies]
axum = "0.6"
color-eyre = "0.6.5"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["full"]}
tower-http = {version = "0.4", features = ["fs", "trace"]}
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

[dev-dependencies]
httpc-test = "0.1.1"

[package]
edition = "2021"
name = "axum-webapp"
version = "0.1.0"
